Refactor user and wallet services; enhance transaction handling and add database migrations
- Refactored CustomUserDetailsService to simplify user loading and password handling.
- Updated TransactionService to use locking for credit listings and carbon credits during transactions.
- Enhanced UserService with improved user creation and validation logic, including password hashing.
- Introduced a new method in WalletService for updating wallet balances with locking.
- Added application properties for development and production environments.
- Created baseline SQL migration scripts for indexes and constraints.
- Implemented unit tests for UserService and WalletService to ensure functionality.
- Configured test properties for in-memory H2 database.